--- a/src/pages/contact/style.module.scss
+++ b/src/pages/contact/style.module.scss
@@ -6,7 +6,9 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-
+  @media #{$mq-min-tablet} {
+    justify-content: space-around;
+  }
   align-items: center;
   position: relative;
   p {
@@ -14,6 +16,10 @@
     margin-top: 130px;
     margin-right: 20px;
     margin-left: 20px;
+
+    @media #{$mq-min-tablet} {
+      font-size: 1.5rem;
+    }
     @media #{$mq-min-pc} {
       position: absolute;
       bottom: 0;
@@ -44,8 +50,8 @@
 
     @media #{$mq-min-tablet} {
       position: static;
-      height: 100vh;
-      padding: 0 35vw;
+
+      padding: 0 10vw;
       justify-content: space-between;
       align-items: center;
     }
