--- a/src/pages/works/style.module.scss
+++ b/src/pages/works/style.module.scss
@@ -156,18 +156,25 @@
   @media #{$mq-min-tablet} {
     display: block;
     transition: 2s opacity 1s;
-    width: 30vw;
+    width: 40vw;
     height: auto;
     background: $secondary-color;
+    @media #{$mq-min-pc} {
+      width: 30vw;
+    }
   }
 
   &.visible {
     opacity: 1;
     top: 0;
     right: 0;
-
     @media #{$mq-min-tablet} {
       padding: 20px;
+      right: 20px;
+      top: 40vh;
+    }
+
+    @media #{$mq-min-pc} {
       right: 50px;
       top: 25vh;
     }
@@ -176,6 +183,10 @@
   p {
     text-align: center;
     font-size: 1rem;
+
+    @media #{$mq-min-tablet} {
+      text-align: left;
+    }
   }
   a {
     margin: 0 auto;
@@ -201,6 +212,9 @@
     display: inline-block;
     margin-bottom: 0;
     text-align: center;
+    @media #{$mq-min-tablet} {
+      text-align: left;
+    }
   }
   button {
     color: white;
